src/objects/Case_SLA__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndTimeHour__c</fullName>
        <label>EndTimeHour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTimeMinute__c</fullName>
        <label>EndTimeMinute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Duration__c</fullName>
        <label>SLA Duration</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTimeHour__c</fullName>
        <label>StartTimeHour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartTimeMinute__c</fullName>
        <label>StartTimeMinute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>SubCategory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case SLA</label>
</CustomObject>